client/src/App.css
.App {
	text-align: center;
}

.App-logo {
	animation: App-logo-spin infinite 20s linear;
	height: 40vmin;
	pointer-events: none;
}

.App-header {
	background-color: #282c34;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: white;
}

.App-link {
	color: #61dafb;
}

@keyframes App-logo-spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(360deg);
	}
}

body {
	font-family: "Share Tech Mono", monospace;
	min-height: 100vh;
	background: rgba(255, 255, 0, 0.6);
}

header {
	min-height: 20vh;
	padding: 10px;
	background: url("https://previews.123rf.com/images/tom19275/tom192751707/tom19275170700001/81477230-vector-blue-electronic-circuit-board-background.jpg");
}
header h1 a {
	margin: 10px auto;
	color: white;
	font-size: 3em;
}

header div {
	background: white;
	opacity: 0.7;
	height: 4vh;
}

footer {
	min-height: 15vh;
	background: url("https://previews.123rf.com/images/tom19275/tom192751707/tom19275170700001/81477230-vector-blue-electronic-circuit-board-background.jpg");
	margin-top: 5px;
}

a {
	text-decoration: none;
	color: blue;
	font-weight: 900;
}

.body-content {
	min-height: 65vh;
}

.selected-component {
	border: 1px solid black;
	padding: 2px;
	background: blue;
	color: white;
}

.selected-components {
	margin: 0 auto;
}

.comment {
	background: rgba(255, 255, 255, 0.4);
	width: 80vw;
	align-self: center;
	margin-top: 2vh;
	margin-bottom: 2vh;
}
.comment strong {
	font-size: 1.5em;
}

#component-select {
	width: 50vw;
	margin: 2vh auto;
}

